# nico-tools

./: .env.example  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Makefile  README.md
.github/workflows/: ci.yml  claude-code-review.yml  pr-validation.yml  project-automation.yml  release.yml
crates/nico/: Cargo.toml
crates/nico-common/: Cargo.toml
crates/nico-common/src/: bootstrap.rs  config.rs  deployment_detect.rs  k8s.rs  lib.rs  output.rs  reach.rs  theme.rs
crates/nico-common/src/boot_probe/: json.rs  log.rs  mod.rs  orchestrate.rs  render.rs  state.rs
crates/nico-correlate/: Cargo.toml
crates/nico-correlate/src/: bootstrap.rs  cli.rs  correlate.rs  diagnosis.rs  event.rs  formatter.rs  hbn_drift.rs  id.rs  lib.rs  main.rs  namespace.rs  source.rs  tail.rs  timeline.rs  tui.rs
crates/nico-correlate/src/sources/: k8s.rs  loki.rs  mod.rs  postgres.rs  redfish.rs  rest.rs  temporal.rs  temporal_grpc.rs
crates/nico-correlate/tests/: json_snapshot.rs  sources.rs
crates/nico-correlate/tests/snapshots/: json_snapshot__empty_timeline.snap  json_snapshot__one_event_per_severity.snap  json_snapshot__with_diagnosis.snap  json_snapshot__without_diagnosis.snap
crates/nico-doctor/: Cargo.toml
crates/nico-doctor/benches/: README.md  cluster_layer_bench.rs  dpu_layer_bench.rs  grpc_layer_bench.rs  health_layer_bench.rs  logs_layer_bench.rs  postgres_layer_bench.rs  workflows_layer_bench.rs
crates/nico-doctor/benches/common/: mod.rs
crates/nico-doctor/src/: baseline.rs  bootstrap.rs  cli.rs  dpu.rs  dpu_cert.rs  dpu_health.rs  dpu_isolation.rs  dpu_services.rs  formatter.rs  grpc.rs  hbn.rs  http.rs  infiniband.rs  k8s.rs  layer.rs  lib.rs  log_source.rs  loki.rs  main.rs  perf_source.rs  preflight.rs  runner.rs  temporal.rs  tui.rs
crates/nico-doctor/src/layers/: cluster.rs  dpu.rs  dpu_cert.rs  dpu_health.rs  dpu_isolation.rs  dpu_services.rs  grpc.rs  hbn.rs  health.rs  infiniband.rs  logs.rs  mod.rs  postgres.rs  workflows.rs
crates/nico-doctor/src/verdicts/: cert.rs  hbn.rs  infiniband.rs  isolation.rs  mod.rs  services.rs
crates/nico-doctor/tests/: ib_alert_carveout.rs  json_snapshot.rs
crates/nico-doctor/tests/snapshots/: json_snapshot__all_ok.snap  json_snapshot__fail_report.snap  json_snapshot__skipped_layer.snap  json_snapshot__unknown_timeout_layer.snap  json_snapshot__warn_only.snap
crates/nico-ops/: Cargo.toml
crates/nico-ops/benches/: README.md  fan_out_bench.rs  idle_tick_bench.rs  reducer_bench.rs  render_bench.rs
crates/nico-ops/benches/common/: mod.rs
crates/nico-ops/src/: action.rs  app.rs  app_tests.rs  cli.rs  clock.rs  correlate_runner.rs  data.rs  events.rs  hbn_panel.rs  layout_solver.rs  lib.rs  model.rs  popup.rs  pulse.rs  ringbuffer.rs  view.rs  view_tests.rs
crates/nico-ops/tests/: perf.rs
crates/nico/src/: main.rs
crates/nico/tests/: cli.rs
docs/adrs/: 0000-template.md  0001-exit-code-semantics.md  0002-read-only-by-design.md  0003-output-format-contract.md  0004-color-semantics.md  0005-reach-mode-autodetect.md  0006-concurrency-discipline.md  0007-optional-tui.md  0008-tui-theme-system.md  0009-tui-visual-chrome.md  0009-umbrella-binary.md  0010-nico-ops-dashboard-architecture.md  0011-strip-tui-from-text-subcommands.md  0012-async-component-tui-event-loop.md  0013-boot-probe.md  0014-snapshot-logs-panel-sizing-and-scrolling.md  0015-axis-verdict-primitive.md  0016-boot-probe-renders-via-ratatui-inline-viewport.md  README.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/design/: ib-config-sync-detection.md  nico-doctor-and-correlate.md
docs/learning/: MASTER.md
docs/learning/kata/: INDEX.md  k01-devspace-bringup.md
docs/learning/topics/: 01-hbn.md
docs/prds/: 001-deployment-type.md  002-dpu-layer-rewrite.md  003-holistic-summary-refactor.md  004-infiniband-layer.md
scripts/: install.sh  smoke.sh
