[package]
name = "nico-common"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
thiserror = "2"
humantime = "2"
owo-colors = "4"
kube = { version = "0.99", features = ["client", "ws"] }
k8s-openapi = { version = "0.24", features = ["latest"] }
tokio = { version = "1", features = ["rt", "net", "io-util"] }
ratatui = { version = "0.29", default-features = false }
