[package]
name = "nico-common"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "2"
humantime = "2"
owo-colors = "4"
async-trait = "0.1"
chrono = "0.4"
kube = { version = "0.99", features = ["client", "ws"] }
k8s-openapi = { version = "0.24", features = ["latest"] }
tokio = { version = "1", features = ["rt", "net", "io-util", "sync", "time", "macros"] }
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = "0.28"
temporal-sdk-core-protos = "0.1"
tonic = { version = "0.13", default-features = false, features = ["channel", "codegen"] }
prost-wkt-types = "0.6"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
