[package]
name = "nico-correlate"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "nico-correlate"
path = "src/main.rs"

[dependencies]
nico-common = { path = "../nico-common" }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
