[package]
name = "nico-correlate"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "nico-correlate"
path = "src/main.rs"

[dependencies]
nico-common = { path = "../nico-common" }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "tls-rustls", "chrono"] }
kube = { version = "0.99", features = ["client", "runtime", "derive"] }
k8s-openapi = { version = "0.24", features = ["latest"] }
temporal-sdk-core-protos = "0.1"
tonic = { version = "0.13", default-features = false, features = ["channel", "codegen"] }
prost-wkt-types = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
ratatui = "0.29"
crossterm = "0.28"
