[package]
name = "nico-doctor"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "nico-doctor"
path = "src/main.rs"

[dependencies]
nico-common = { path = "../nico-common" }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
futures = "0.3"
humantime = "2"
chrono = "0.4"
kube = { version = "0.99", features = ["client"] }
k8s-openapi = { version = "0.24", features = ["latest"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "tls-rustls"] }
temporal-sdk-core-protos = "0.1"
tonic = { version = "0.13", default-features = false, features = ["channel", "codegen"] }
prost-wkt-types = "0.6"
