[package]
name = "nico-ops"
version = "0.1.0"
edition = "2024"

[dependencies]
nico-common = { path = "../nico-common" }
nico-doctor = { path = "../nico-doctor" }
clap = { version = "4", features = ["derive", "env"] }
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "signal"] }
tokio-stream = "0.1"
futures = "0.3"
chrono = "0.4"
humantime = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
