[package]
name = "nico-ops"
version = "0.1.0"
edition = "2024"

[dependencies]
nico-common = { path = "../nico-common" }
nico-doctor = { path = "../nico-doctor" }
nico-correlate = { path = "../nico-correlate" }
clap = { version = "4", features = ["derive", "env"] }
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "signal"] }
tokio-stream = "0.1"
futures = "0.3"
chrono = "0.4"
humantime = "2"
arboard = { version = "3", default-features = false }
tui-big-text = "0.7"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
