[package]
name = "nico-ops"
version = "0.1.0"
edition = "2024"

[dependencies]
nico-common = { path = "../nico-common" }
nico-doctor = { path = "../nico-doctor" }
nico-correlate = { path = "../nico-correlate" }
clap = { version = "4", features = ["derive", "env"] }
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
tui-big-text = "0.7"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "signal"] }
tokio-stream = "0.1"
futures = "0.3"
chrono = "0.4"
humantime = "2"
arboard = { version = "3", default-features = false }

[features]
# Opt-in dhat heap-profiling allocator. Off by default; enable for
# perf benches only:
#   cargo bench -p nico-ops --features dhat-heap
dhat-heap = []

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
criterion = { version = "0.5", features = ["async_tokio"] }
dhat = "0.3"
async-trait = "0.1"

[[bench]]
name = "idle_tick_bench"
harness = false

[[bench]]
name = "fan_out_bench"
harness = false

[[bench]]
name = "reducer_bench"
harness = false

[[bench]]
name = "render_bench"
harness = false
