[package]
name = "nico"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "nico"
path = "src/main.rs"

[dependencies]
nico-doctor = { path = "../nico-doctor" }
nico-correlate = { path = "../nico-correlate" }
nico-ops = { path = "../nico-ops" }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
